--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
+    <link rel="stylesheet" href="src/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,16 +13,18 @@
     />
   </head>
   <body>
-    <h1 class="text-center">🥐Contact us</h1>
-    <br />
-    <p class="text-center">
-      To contact croissant.com, please email us at hello@croissant.com for more
-      info
-    </p>
-    <footer>
-      <a href="/" title="Home">Homepage</a>
-      <a href="/photo.html" title="Croissant photo">Photo</a>
-      <a href="/contact.html" title="Contact Croissant.com">Contact</a>
-    </footer>
+    <div class="container">
+      <h1 class="text-center">🥐Contact us</h1>
+      <br />
+      <p class="text-center">
+        To contact croissant.com, please email us at hello@croissant.com for
+        more info
+      </p>
+      <footer>
+        <a href="/" title="Home">Homepage</a>
+        <a href="/photo.html" title="Croissant photo">Photo</a>
+        <a href="/contact.html" title="Contact Croissant.com">Contact</a>
+      </footer>
+    </div>
   </body>
 </html>
