--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The best croissant in Ciutadella</title>
+    <link rel="stylesheet" href="src/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,17 +13,19 @@
     />
   </head>
   <body>
-    <h1 class="text-center">🥐 Croissant</h1>
-    <br />
-    <p class="text-center">
-      A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
-      named for its historical crescent shape. Croissants and other viennoiserie
-      are made of a layered yeast-leavened dough
-    </p>
-    <footer>
-      <a href="/" title="Home">Homepage</a>
-      <a href="/photo.html" title="Croissant photo">Photo</a>
-      <a href="/contact.html" title="Contact Croissant.com">Contact</a>
-    </footer>
+    <div class="container">
+      <h1 class="text-center">🥐 Croissant</h1>
+      <br />
+      <p class="text-center">
+        A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
+        named for its historical crescent shape. Croissants and other
+        viennoiserie are made of a layered yeast-leavened dough
+      </p>
+      <footer>
+        <a href="/" title="Home">Homepage</a>
+        <a href="/photo.html" title="Croissant photo">Photo</a>
+        <a href="/contact.html" title="Contact Croissant.com">Contact</a>
+      </footer>
+    </div>
   </body>
 </html>
