--- a/photo.html
+++ b/photo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>photo</title>
+    <link rel="stylesheet" href="src/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,5 +12,15 @@
       crossorigin="anonymous"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1 class="text-center">🥐 A picture of a croissant</h1>
+      <img src="src/media/croissant.jpg" class="croissant-photo rounded" />
+      <footer>
+        <a href="/" title="Home">Homepage</a>
+        <a href="/photo.html" title="Croissant photo">Photo</a>
+        <a href="/contact.html" title="Contact Croissant.com">Contact</a>
+      </footer>
+    </div>
+  </body>
 </html>
