--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,8 @@
       <h1 class="text-center">🥐Contact us</h1>
       <br />
       <p class="text-center">
-        To contact croissant.com, please email us at hello@croissant.com for
+        To contact croissant.com, please email us at
+        <a href="hello@croissant.com" class="mail">hello@croissant.com</a> for
         more info
       </p>
       <footer>
