--- a/photo.html
+++ b/photo.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Enjoy the best croissant in Menorca" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>photo</title>
     <link rel="stylesheet" href="src/styles.css" />
@@ -15,7 +16,11 @@
   <body>
     <div class="container">
       <h1 class="text-center">🥐 A picture of a croissant</h1>
-      <img src="src/media/croissant.jpg" class="croissant-photo rounded" />
+      <img
+        src="src/media/croissant.jpg"
+        class="croissant-photo rounded"
+        alt="croissant in a dish"
+      />
       <footer>
         <a href="/" title="Home">Homepage</a>
         <a href="/photo.html" title="Croissant photo">Photo</a>
