--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Contact us and eat the best croissant" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
     <link rel="stylesheet" href="src/styles.css" />
@@ -18,7 +19,7 @@
       <br />
       <p class="text-center">
         To contact croissant.com, please email us at
-        <a href="hello@croissant.com" class="mail">hello@croissant.com</a> for
+        <a href="hello@croissant.com" class="mail">hello@croissant.com</a>for
         more info
       </p>
       <footer>
