--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="In search of the best croissant in Ciutadella? We got you!"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The best croissant in Ciutadella</title>
     <link rel="stylesheet" href="src/styles.css" />
